Added BattleStatus, changed Character and Skill templates.